--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "tinro": "^0.6.12"
   },
   "dependencies": {
-    "sirv-cli": "^2.0.0"
+    "sirv-cli": "^2.0.0",
+    "svelte-carousel": "^1.0.20"
   }
 }
